<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">common</string>

    <string name="request_no_param_error">请求参数异常</string>
    <string name="request_no_method_error">请求方法异常</string>
    <string name="request_no_network_connect">网络异常，请检查网络</string>
    <string name="request_wrong_method">访问方法错误</string>
    <string name="nav_my_wallet">我的钱包</string>
    <string name="jmui_loading">正在加载</string>
    <string name="server_err">服务器错误</string>
    <!-- dialog -->
    <string name="toast_no_empty">请输入完整信息</string>
    <string name="my_task_release_title">寻求帮助</string>
    <string name="str_sure">确定</string>
    <string name="share">分享到</string>
    <string name="str_share_dialog_wechat">微信</string>
    <string name="str_share_dialog_circle">朋友圈</string>
    <string name="account_facebook">Facebook</string>
    <string name="str_cancel">取消</string>
    <string name="str_dialog_title">你确定要离开吗？</string>
    <string name="my_task_release_des">描述</string>
    <string name="my_task_release_reward">答谢</string>
    <string name="my_task_release_time_limit">时限</string>
    <string name="my_task_release_btn">立即发布</string>
    <string name="my_task_release_des_hint">请输入内容</string>
    <string name="my_task_release_reward_hint">请输入答谢金</string>
    <string name="my_task_release_time_limit_hint">年-月-日 时:分</string>
    <string name="my_task_heped">帮Ta一下</string>
    <string name="my_task_receive">已被领取</string>
    <string name="red_paper">恭喜你/n超过80%的玩家/n获得助力红包</string>
    <!-- 帮过我的-->
    <string name="task_list_unreceive">未领取</string>
    <string name="task_list_doing">对方正在帮忙</string>
    <string name="task_list_confirm">去确认</string>
    <string name="task_list_finish">帮完了</string>
    <string name="task_list_unfinish">没帮成</string>
    <string name="task_list_undone">帮不了</string>
    <string name="task_list_expired">没人帮</string>
    <string name="task_list_btn_undone">未完成</string>
    <string name="task_list_btn_done">确认完成</string>
    <!-- 我帮过的 -->
    <string name="my_task_unreceive">未领取</string>
    <string name="my_task_doing">帮忙ing</string>
    <string name="my_task_confirm">等对方答谢</string>
    <string name="my_task_finish">帮完了</string>
    <string name="my_task_unfinish">没帮成</string>
    <string name="my_task_btn_undone">帮不了</string>
    <string name="my_task_btn_done">帮完了</string>
    <string name="my_task_expired">没人帮</string>
    <string name="enter_wallet_code">请上传钱包安全码进行验证</string>
    <string name="wallet_code_image">（钱包安全码为一张二维码图片）</string>
    <string name="open_marjar_wallet">您尚未开通马甲钱包，开通后方可使用该功能</string>
    <string name="go_kt">去开通</string>
    <string name="not_vertifu">您尚未进行实名认证，</string>
    <string name="uses_fun">实名后方可使用该功能</string>
    <string name="not_support">暂未支持该功能</string>
    <string name="not_user_majar">很抱歉你无法核销他人创建的马甲劵,尝试创建自己的马甲劵吧</string>
    <string name="set_wallet_psw">设置钱包密码</string>
    <string name="save_image">请保存图片</string>
    <string name="create_save_code">即将生成安全码，生成后将不可更改，是否确认生成?</string>
    <string name="open_permission">检测到手机系统已关闭读取相册权限，请前往【设置】-【权限管理】中开启</string>
    <string name="save_success">保存成功</string>
    <string name="save_faile">保存失败</string>
    <string name="create_qrcode_1">请上传一张你喜欢的图片 生成专属安全码</string>
    <string name="create_1">一键生成</string>
    <string name="click_save">点击保存</string>
    <string name="wallet_psw_not_save">马甲APP不会记录用户的钱包密码，若丢失将无法找回，请妥善保存，请勿截图保存，以免造成资金损失。</string>
    <string name="next_step_1">下一步</string>
    <string name="album">相册</string>
    <string name="take_photo">拍照</string>
    <string name="share_to">分享到</string>
    <string name="password_error">密码错误</string>
    <string name="click_retry">点击重试</string>

</resources>
