<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shanchain.data.common.ui.SetWalletPasswordActivity">

    <com.shanchain.data.common.ui.toolBar.ArthurToolBar
        android:id="@+id/tb_wallet"
        style="@style/common_style_toolbar"
        app:titleColor="@color/colorDivider"
        app:titleTextSize="16">

    </com.shanchain.data.common.ui.toolBar.ArthurToolBar>

    <!-- 生成密码 -->
    <RelativeLayout
        android:id="@+id/relative_create"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_wallet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_40"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_select_picture_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_qrcode_1" />

        <ImageView
            android:id="@+id/iv_select_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_select_picture_hint"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_40"
            android:src="@mipmap/add_picture" />

        <Button
            android:id="@+id/btn_create_wallet_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_select_picture"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/common_shape_coupon_btn_bg_gray"
            android:clickable="false"
            android:text="@string/create_1"
            android:textColor="@color/white" />

    </RelativeLayout>

    <!-- 保存密码 -->
    <RelativeLayout
        android:id="@+id/relative_save_password_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tb_wallet"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_40"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_select_picture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/create_qrcode_1" />

        <ImageView
            android:id="@+id/iv_password_picture"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tv_select_picture_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@mipmap/add_picture" />

        <Button
            android:id="@+id/btn_save_wallet_password"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/iv_password_picture"
            android:layout_centerHorizontal="true"
            android:background="@drawable/common_shape_bg_btn_login"
            android:clickable="false"
            android:text="@string/click_save"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_safety_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_save_wallet_password"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/dp_40"
            android:background="@drawable/shape_bg_msg_send_nomal"
            android:padding="@dimen/dp_10"
            android:textAlignment="center"
            android:text="@string/wallet_psw_not_save"
            android:textColor="@color/red_btn_normal" />

        <Button
            android:id="@+id/btn_next_step"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_safety_tips"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/common_shape_coupon_btn_bg_gray"
            android:clickable="false"
            android:text="@string/next_step_1"
            android:textColor="@color/white" />

    </RelativeLayout>

</RelativeLayout>